@@ -18,6 +18,8 @@
 plugins {
     id 'java'
     id 'application'
+    id 'org.graalvm.buildtools.native' version '0.10.2'
+    id "com.github.johnrengelman.shadow" version "8.1.1"
     id 'org.javamodularity.moduleplugin' version '1.8.12'
     id "org.gradlex.extra-java-module-info"  version "1.8"
     id 'org.openjfx.javafxplugin' version '0.0.13'
@@ -62,7 +64,7 @@ tasks.withType(JavaCompile).configureEach {
 
 application {
     mainModule = 'com.project.javaeditor'
-    mainClass = 'com.project.javaeditor.Application'
+    mainClass = 'com.project.javaeditor.EntryPoint'
 }
 
 javafx {
@@ -77,25 +79,85 @@ dependencies {
             'org.eclipse.lsp4j_0.22.0.v20240213-2011.jar',
             'com.google.gson_2.10.1.v20230109-0753.jar'
     ]))
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.23.1'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.23.1'
+    implementation group: 'com.github.javaparser', name: 'javaparser-core', version: '3.26.1'
+    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.46.0.1'
+    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.5.7'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.7'
     implementation group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.11.3'
 
+    testImplementation 'org.hamcrest:hamcrest:3.0'
+    testImplementation 'org.testfx:testfx-core:4.0.18'
+    testImplementation 'org.testfx:testfx-junit5:4.0.18'
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testImplementation("org.junit.jupiter:junit-jupiter-params:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 
 }
 
+jar {
+
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
+    manifest {
+        attributes(
+                'Main-Class': 'com.project.javaeditor.Application'
+        )
+    }
+}
+
+shadowJar {
+    archiveClassifier.set('all')
+    mergeServiceFiles()
+    manifest {
+        attributes 'Main-Class': 'com.project.javaeditor.EntryPoint'
+    }
+}
+
+build.dependsOn shadowJar
+
+graalvmNative {
+    binaries {
+        main {
+            imageName = "Fusion IDE"
+            mainClass = 'com.project.javaeditor.EntryPoint'
+            debug = true
+            verbose = true
+            fallback = false
+            agent {
+                buildArgs.add('--initialize-at-build-time=org.sqlite.util.ProcessRunner')
+                buildArgs.add('-H:Subsystem=windows')
+            }
+
+            resources.autodetect()
+        }
+    }
+}
+
+tasks.withType(JavaExec).configureEach {
+
+    if (project.hasProperty("agent")) {
+        jvmArgs = [
+                '-agentlib:native-image-agent=config-output-dir=src/main/resources/META-INF/native-image/,config-write-period-secs=300,config-write-initial-delay-secs=5'
+        ]
+    }
+
+}
+
 test {
     useJUnitPlatform()
+    jvmArgs = [
+            '--add-opens', 'javafx.graphics/com.sun.javafx.application=org.testfx',
+            '--add-opens', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
+    ]
 }
 
 jlink {
+
     imageZip = project.file("${getLayout().getBuildDirectory()}/distributions/app-${javafx.platform.classifier}.zip")
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages', '--ignore-signing-information']
+    addExtraDependencies('javafx')
     launcher {
-        name = 'app'
+        name = 'Fusion IDE'
     }
 }
 
